--- a/src/components/table-header/rais-table-header.component.scss
+++ b/src/components/table-header/rais-table-header.component.scss
@@ -21,6 +21,7 @@
   border: 1px solid #CCCCCC;
   padding: 8px 16px;
   width: 134px;
+  min-height: 36px;
   font-family: 'Figtree', sans-serif;
 
   &--default {
@@ -34,11 +35,19 @@
     line-height: 1.2;
     letter-spacing: 0.36px;
     color: #FFFFFF;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   &__sort-icon {
     flex-shrink: 0;
     display: inline-block;
+    width: 12px;
+    height: 12px;
+    background-color: #FFFFFF;
+    -webkit-mask: url('/assets/boxicons/bxs-sort-alt.svg') no-repeat center / contain;
+            mask: url('/assets/boxicons/bxs-sort-alt.svg') no-repeat center / contain;
   }
 
   // Skeleton variant
